tool/tests/snapshots/dotnet_target__generation_using_library_config@MyLibError.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using SomeOrg.SomeModule;
using We.Also.Need.This;
using OurOrg.OurRustLib.Diplomat;
#pragma warning restore 0105

namespace OurOrg.OurRustLib;

#nullable enable

public partial class MyLibError: IDisposable
{
    private unsafe Raw.MyLibError* _inner;

    /// <summary>
    /// Creates a managed <c>MyLibError</c> from a raw handle.
    /// </summary>
    /// <remarks>
    /// Safety: you should not build two managed objects using the same raw handle (may causes use-after-free and double-free).
    /// </remarks>
    /// <remarks>
    /// This constructor assumes the raw struct is allocated on Rust side.
    /// If implemented, the custom Drop implementation on Rust side WILL run on destruction.
    /// </remarks>
    public unsafe MyLibError(Raw.MyLibError* handle)
    {
        _inner = handle;
    }

    public void ToDisplay(DiplomatWriteable out)
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyLibError");
            }
            Raw.MyLibError.ToDisplay(_inner, &out);
        }
    }

    public string ToDisplay()
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyLibError");
            }
            DiplomatWriteable writeable = new DiplomatWriteable();
            Raw.MyLibError.ToDisplay(_inner, &writeable);
            string retVal = writeable.ToUnicode();
            writeable.Dispose();
            return retVal;
        }
    }

    /// <summary>
    /// Returns the underlying raw handle.
    /// </summary>
    public unsafe Raw.MyLibError* AsFFI()
    {
        return _inner;
    }

    /// <summary>
    /// Marks this object as moved into Rust side.
    /// </summary>
    public void MarkAsMoved()
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("MyLibError");
            }
            _inner = null;
        }
    }

    /// <summary>
    /// Restores unmanaged ressource handle to this object.
    /// </summary>
    public unsafe void RestoreHandle(Raw.MyLibError* handle)
    {
        _inner = handle;
    }

    /// <summary>
    /// Destroys the underlying object immediately.
    /// </summary>
    public void Dispose()
    {
        unsafe
        {
            if (_inner == null)
            {
                return;
            }

            Raw.MyLibError.Destroy(_inner);
            _inner = null;

            GC.SuppressFinalize(this);
        }
    }

    ~MyLibError()
    {
        Dispose();
    }
}

