tool/tests/snapshots/dotnet_target__generation_using_library_config@RawMyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using SomeOrg.SomeModule;
using We.Also.Need.This;
using OurOrg.OurRustLib.Diplomat;
#pragma warning restore 0105

namespace OurOrg.OurRustLib.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct MyStruct
{
    private const string NativeLib = "mylib";

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_new_slice", ExactSpelling = true)]
    public static unsafe extern FfiResultBoxMyStructBoxMyLibError NewSlice(double* v, nuint vSz);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_set_slice", ExactSpelling = true)]
    public static unsafe extern FfiResultVoidBoxMyLibError SetSlice(MyStruct* self, double* newSlice, nuint newSliceSz);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(MyStruct* self);
}

